fix(wc-angular): overflow wrap for messages

--- a/frontend/web-components/angular-chat-window/src/app/web-components/chat-message/chat-message.component.scss
+++ b/frontend/web-components/angular-chat-window/src/app/web-components/chat-message/chat-message.component.scss
@@ -21,6 +21,10 @@
   font-size: 12pt;
 }
 
+.message {
+  overflow-wrap: break-word;
+}
+
 lit-element-chat-link {
   padding: 1rem;
   margin-top: 0.5rem;
